overflow fixes

--- a/style/main.css
+++ b/style/main.css
@@ -10,8 +10,8 @@ body {
   margin: 0px;
     color: #333;
     font-size: 19px;
-    overflow: hidden;
+      overflow-x: hidden;
 }
 header, #Home #Events, #History, #Register{
-    overflow: hidden;
+  overflow: hidden;
 }
